# robocupHome2015

./: README.md  ReadMe  Y-Direction Error  bimanual_testing_no_master_slave  bimanual_testing_x_plane_rectangle  path.h
devel/: .catkin  .rosinstall  setup.sh
devel/include/utilities/: gripperTestRequest.h  gripperTestStatus.h
devel/lib/pkgconfig/: manipulation.pc  utilities.pc
devel/lib/utilities/: gripper_test_both
devel/lib/vision/: calibrate  object_detector  object_detector_v2
install/: .rosinstall  _setup_util.py
install/lib/pkgconfig/: utilities.pc
install/share/utilities/: package.xml
src/bimanual/: CMakeLists.txt  package.xml
src/bimanual/scripts/: Constants.py  Coordinated_Motion.py
src/core/: AllConstants.ini  AllConstants.ini.backup  CMakeLists.txt  CommonConstants.py  package.xml
src/core/src/: CommonConstants.h~  Constants.h  core.cpp  core.h  coreFunctions.cpp  generateAllConstants.cpp
src/hmi/msg/: hmiRequest.msg  introRequest.msg
src/manipulation/: CMakeLists.txt
src/utilities/: CMakeLists.txt  readMe
src/vision/: CMakeLists.txt  CMakeLists.txt~  ReadMe  package.xml  package.xml~
vision_test/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  HoughCircle.cpp  Makefile  OrbDetector.cpp  SIFT_2images  SIFT_2images.cpp  SURF_Homography  SURF_Homography.cpp  SURF_Homography.cpp~  SURF_detector  SURF_detector.cpp  SURF_detector.cpp~  cmake_install.cmake  continuous  continuous.cpp  continuous_SIFT  continuous_SIFT.cpp  continuous_orb  corner  corner.cpp  displayImage.cpp~  display_image.cpp~  nurofen_crop.xcf  objectDetection
(+111 files in other folders)
